--- a/test/README
+++ b/test/README
@@ -9,5 +9,21 @@ Structural variants (SVs) will be shown in image files.
 (1) reference assembly (GRCh38 in this example) or baseline assembly
 (2) assembly of your interst
 
+Here are first several lines of sv.HG00438.maternal.ins.merged.txt
+seq	ref_chr	ref_pos	ref_strand	query_count	query_chr	query_pos	query_strand	strand_test
+AATAAATGATACTATTAAATTAGAACTAGCA	chr18	67403942	+	1	HG00438#2#h2tg000048l	20409693	+	+
+ATAAATGATACTATTAAATTAGAACTAGCAT	chr18	67403943	+	1	HG00438#2#h2tg000048l	20409694	+	+
+TAAATGATACTATTAAATTAGAACTAGCATC	chr18	67403944	+	1	HG00438#2#h2tg000048l	20409695	+	+
+AAATGATACTATTAAATTAGAACTAGCATCT	chr18	67403945	+	1	HG00438#2#h2tg000048l	20409696	+	+
+AATGATACTATTAAATTAGAACTAGCATCTG	chr18	67403946	+	1	HG00438#2#h2tg000048l	20409697	+	+
+ATGATACTATTAAATTAGAACTAGCATCTGG	chr18	67403947	+	1	HG00438#2#h2tg000048l	20409698	+	+
+TGATACTATTAAATTAGAACTAGCATCTGGA	chr18	67403948	+	1	HG00438#2#h2tg000048l	20409699	+	+
+GATACTATTAAATTAGAACTAGCATCTGGAA	chr18	67403949	+	1	HG00438#2#h2tg000048l	20409700	+	+
+ATACTATTAAATTAGAACTAGCATCTGGAAG	chr18	67403950	+	1	HG00438#2#h2tg000048l	20409701	+	+
+TACTATTAAATTAGAACTAGCATCTGGAAGA	chr18	67403951	+	1	HG00438#2#h2tg000048l	20409702	+	+
+ACTATTAAATTAGAACTAGCATCTGGAAGAA	chr18	67403952	+	1	HG00438#2#h2tg000048l	20409703	+	+
+CTATTAAATTAGAACTAGCATCTGGAAGAAG	chr18	67403953	+	1	HG00438#2#h2tg000048l	20409704	+	+
+:
+:
 
 
